src/test/ui/consts/const-err2.stderr
error: index out of bounds: the len is 1 but the index is 1
  --> $DIR/const-err2.rs:19:14
   |
LL |     let _e = [5u8][1];
   |              ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/const-err2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: aborting due to previous error

